--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -9,7 +9,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751400.md#1" target="_blank">【一线采访】儿离世近一年 武汉母亲痛斥当局</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751400.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/0e30d1853c3a390593daaff2d3c80233-150x120.jpg" align ="left"></a>“我的儿子在一年前的今天还在”，“他死得很冤，在武汉封城之前，我们都不明白，都不知道。我们的政府都没有告诉我们这个疫情是怎样的一回事，是不是人传人。我们老百姓都在准备过大年。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 5:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1" target="_blank">【重播】二次弹劾 参院判川普无罪</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301993035-150x120.jpg" align ="left"></a>美东时间周六（2月13日），美国参议院对前任总统唐纳德?川普（特朗普）的二次弹劾审讯进行到第五天，参议院最终以57票对43票判川普无罪。新唐人、大纪元联合对此进行直播（中文同声翻译）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 5:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1" target="_blank">武汉鲜花脱销 市民：佐证染疫死亡数惊人</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-951040426-150x120.jpg" align ="left"></a>武汉花市近日异常火爆，各大花店出现供不应求的罕见场面。对此官媒的解释是“报复性消费”所致，但武汉市民对于官方宣传表示愤怒，并指鲜花脱销是因当地有祭奠习俗，并以此证明因疫情死亡的实际人数远超官方数据。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 2:57 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" target="_blank">日本福岛附近7.1级强震 东京有强烈震感</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_92X2VD-150x120.jpg" align ="left"></a>日本气象厅消息显示，当地时间周六（2月13日）23时8分，日本东北地区发生里氏7.1级地震，震源位于福岛附近海域（北纬37.7度，东京141.8度），震源深度60公里。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 11:03 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" target="_blank">日本福岛附近7.1级强震 1.6万人罹难</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_92X2VD-150x120.jpg" align ="left"></a>日本气象厅消息显示，当地时间周六（2月13日）23时8分，日本东北地区发生里氏7.1级地震，震源位于福岛附近海域（北纬37.7度，东京141.8度），震源深度60公里。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 11:03 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" target="_blank">中共海外舆论操纵手法大曝光 西方如何应对</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/ffbb298fdaf8bf5a9bf6d14c7c2cbd2f-150x120.jpg" align ="left"></a>冷战时代，中共政权没有机会在民主国家内部活动，随着全球化的到来，过去10年来，中共已成为全球媒体市场不会缺席的参与者。使得中共有机会在民主国家内采取宣传、审查、操纵媒体与舆论行动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 10:46 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/12/27/n10936246.md#1" target="_blank">魔鬼在统治着我们的世界(28)：结束语</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/12/27/n10936246.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/12/c54ed2bb003ac1dc51714854df673046-150x120.jpg" align ="left"></a>人类走过了漫长的岁月，创造了无数的辉煌，也经历了数不清的挫折和灾难。回顾历史，人们会发现，社会道德高尚会带来政治清明、经济发达、文化繁荣，民众安居乐业；而道德堕落则会带来国家的衰亡甚至文明的毁灭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 10:44 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750689.md#1" target="_blank">【疫情2.13】世卫：中共拒提供疫情原始数据</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750689.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/2102041956392124-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周六（2月13日）中午12点20分，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.08亿（108,327,041）例，死亡人数超过238万（2,386,370）例。
