--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -31,7 +31,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743220.md#1" target="_blank">沈舟：美军双航母再聚南海继续强势威慑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12743220.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/50924766701_6c78efdda6_k-150x120.jpg" align ="left"></a>2月9日，美军及时公布尼米兹号航母（CVN 68）和罗斯福号航母（CVN 71）舰队在南海共同演练，并继续向中共释放强烈威慑信号。2020年7月，尼米兹号航母和里根号航母（CVN76）曾在南海两度汇聚，之前还曾和罗斯福号航母在菲律宾海演练。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月10日 2:26 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742476.md#1" target="_blank">【网海拾贝】支持社会主义的美国人骤减</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/IMG_1554-1-150x120.jpg" align ="left"></a>亚利桑那州基督教大学的文化研究中心2月3日发布的新闻稿写道，2020年总统大选后，只有32％的美国成年人支持社会主义，比2018年调查中的41％的社会主义支持率减少了9个百分点，这意味着全美国，支持社会主义的人数减少了2000万。新闻稿还说，“68％的多数人表示，他们更喜欢资本主义，这个比例相当于在全美，有超过1.7亿.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 5:08 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742407.md#1" target="_blank">袁斌：Clubhouse爆红，新疆人亲述被迫害惨状</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742407.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/gettyimages-1152108715-600x400-150x120.jpg" align ="left"></a>一个名为 Clubhouse 、以语音聊天为主的美国社交平台，这个星期突然在亚洲爆红。由于没有审查，令其成为大陆网络及言论审查的意外空间，大量中港台网民因此纷纷涌入，几乎每个房间都在聊政治，包括新疆、香港、台湾等敏感话题，引发了外媒的广泛关注，路透社、彭博社、《金融时报》、《日经亚洲》等主要媒体都发表了报道。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 4:38 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747372.md#1" target="_blank">觅真：离年傍节 家破人亡知多少？</a><br></h3>今天是大年三十，是黄历庚子年的最后一天。笔者浏览明慧网文章，得知在最后的一天中共仍然在疯狂的作恶，祸害善良的百姓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月12日 1:29 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741876.md#1" target="_blank">王赫：缅甸政变 中共陷困局？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741876.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230909016-150x120.jpg" align ="left"></a>2月1日，缅甸军方发动政变。美国、西方国家群起谴责，酝酿制裁措施。中共与此迥异，仅指缅甸军方只是大规模改组政府，并联合俄罗斯挡下联合国安理会的谴责声明。有评论认为，缅甸政变是“中共看戏、西方着急”，或“美国踩空、中共得势”。笔者以为，实际情况可能恰恰相反，缅甸政变使中共对缅政策陷入困境。这有两点理由。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 11:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746849.md#1" target="_blank">傅华：琪儿的歌</a><br></h3>（一）母子的呼唤
 
 我的女儿叫雅琪。她是在中共计划生育政策下的独生女，对于我们家庭二代人来说非常的珍爱。“琪儿、琪崽崽”是我们对她的昵称。琪儿在一篇《噩梦醒来见彩虹》的自述中写道：......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 8:43 PM			</td></tr>
