--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752658.md#1" target="_blank">英国正式立法 抵制中共活摘器官</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752658.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/11-2-320x200.jpg" align ="left"></a>2月11日，英国的《药品和医疗器械法案》修正案正式成为法律，这是英国政府首次出台立法，明确抵制中共活摘器官的恶行。法案目的是制止中共强摘良心犯器官的罪恶，确保从.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月15日 1:25 AM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1" target="_blank">揭秘中共如何利用留学生和美国学者窃技术</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750365.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/11-87-150x120.jpg" align ="left"></a>美国联邦调查局上个月逮捕了麻省理工学院著名纳米技术专家陈刚，指控他在申请联邦研究经费时，隐瞒为谋取利益而与中共科技机构之间的密切关系。陈刚是在中国出生的美籍华人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:39 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1" target="_blank">美众议员：取消文化类似中共社会信用系统</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746323.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/GettyImages-108337482-150x120.jpg" align ="left"></a>美国国会众议员马克·格林（Mark Green）在福克斯新闻网站撰文提醒美国人警惕激进左派的“取消文化”和言论审查趋势，并强调这种审查做法类似于中共利用社会信用系统控制民众的剧本。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:31 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank">【疫情2.14】美国议员提法案 追责世卫</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1139948605-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周日（2月14日）上午4点，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.08亿（108,565,661）例，死亡人数超过239万（2,394,346）例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:03 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank">【疫情2.14】美英指责中共未充分提供数据</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1300357867-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周日（2月14日）上午4点，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.08亿（108,565,661）例，死亡人数超过239万（2,394,346）例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 8:03 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751480.md#1" target="_blank">参院弹劾审讯判无罪 川普发长篇声明回应</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751480.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230695483-150x120.jpg" align ="left"></a>随后，川普“前总统办公室”发出声明说，感谢律师团队以及在弹劾审判投票中投下无罪票的议员们；同时也重申，美国建立在公正的法治基础上，不能接受某党将司法变成政治复仇的事情。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 9:17 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751569.md#1" target="_blank">【解密时分】一周军情速递 美双航母南海演习</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751569.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/download-23-150x120.jpg" align ="left"></a>美国双航母南海演习，法国核潜艇进入南海；而同一时间美国联合日本，澳大利亚在关岛进行空军演习。中共却远在渤海进行多次军事演习。意大利航母加富尔开往美国接收第五代战机F35B。菲律宾本周接收韩国导弹护卫舰。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 9:08 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12750047.md#1" target="_blank">中国各军区兵种大法弟子给李洪志大师拜年</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12750047.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/2021-2-12-2101261606474676-150x120.jpg" align ="left"></a>2021辛丑新年到，中国大陆各军区、兵种的法轮功学员恭祝他们的师父李洪志大师过年好！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 6:15 AM							</td></tr>
