--- a/gb/20/1/29/n11830326.md
+++ b/gb/20/1/29/n11830326.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rfvbv298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rfvbv298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ykuxep306/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ykuxep306/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ykuxep306/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ykuxep306/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ykuxep306/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ykuxep306/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ykuxep306/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>FDA：免洗液不能预防流感或埃博拉病毒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-678852-600x400.jpg" />
-<h6>美国食品药品监督管理局（FDA，如图）近期警告美国免洗液生产商Gojo Industries，停止声称其免洗液产品可以帮助预防埃博拉病毒、诺如病毒和流感等。 (Manny Ceneta/Getty Images)
+<h6>美国食品和药物管理局（FDA）已发布对氯喹（chloroquine）和羟氯喹（hydroxychloroquine）的紧急使用授权，以治疗因Covid-19住院的患者。 (Manny Ceneta/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年01月29日讯】（大纪元记者王祥编译报导）美国食品药品监督管理局（FDA）近期警告美国<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E6%B6%B2.md">免洗液</a>生产商Gojo Industries，停止声称其免洗液产品可以帮助预防埃博拉<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md">病毒</a>、诺如病毒和<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E6%B5%81%E6%84%9F.md">流感</a>等。</p>
+	<p>【大纪元2020年01月29日讯】（大纪元记者王祥编译报导）美国食品药品监督管理局（FDA）近期警告美国<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E6%B6%B2.md#1">免洗液</a>生产商Gojo Industries，停止声称其免洗液产品可以帮助预防埃博拉<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>、诺如病毒和<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E6%B5%81%E6%84%9F.md#1">流感</a>等。</p>
 <p>FDA的合规主任在1月17日致函给Gojo说，该公司对旗下生产的酒精类免洗胶、泡沫和喷雾商品进行的营销说辞毫无根据。</p>
-<p>比如：Gojo的畅销品之一——Purell医疗护理领先<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E6%B6%B2.md">免洗液</a>（Purell Healthcare Advanced Hand Sanitizer）自称，该产品可以保护用户免受埃博拉<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md">病毒</a>、诺如病毒、<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E6%B5%81%E6%84%9F.md">流感</a>及其它病毒感染。</p>
-<p>FDA在信中指出：“到目前为止，我们还不知道有任何一款免洗液，包括Purell是经过测试、能抵御<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%9F%83%E5%8D%9A%E6%8B%89%E7%97%85%E6%AF%92.md">埃博拉病毒</a>的。”</p>
+<p>比如：Gojo的畅销品之一——Purell医疗护理领先<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E5%85%8D%E6%B4%97%E6%B6%B2.md#1">免洗液</a>（Purell Healthcare Advanced Hand Sanitizer）自称，该产品可以保护用户免受埃博拉<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>、诺如病毒、<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E6%B5%81%E6%84%9F.md#1">流感</a>及其它病毒感染。</p>
+<p>FDA在信中指出：“到目前为止，我们还不知道有任何一款免洗液，包括Purell是经过测试、能抵御<ahref="https://github.com/ykuxep306/djy/blob/master/gb/tag/%E5%9F%83%E5%8D%9A%E6%8B%89%E7%97%85%E6%AF%92.md#1">埃博拉病毒</a>的。”</p>
 <p>该机构还呼吁Gojo公司停止其网站上的不实宣传说法。比如：Purell网站上称，其免洗液“减少了高达51%的学生缺勤率”。同时，Gojo声称，Purell可在更衣室和其它充满细菌的运动环境中提供防御，减少某些抗药性感染。</p>
 <p>FDA还提醒说，Gojo的市场营销暗示其某些产品可以用于预防疾病。</p>
 <p>在获得FDA警告后，Gojo立即发出一份声明说，它已采取了纠正措施。</p>
@@ -22,40 +22,46 @@
 <p>道迪指出，传染病不会通过手进入人体，当人用手触摸嘴巴、鼻子、眼睛等时才会感染。</p>
 <p>“如果有人对着你脸上打喷嚏，显然免洗液无法起作用。”他说，“这些免洗液产品是很好，但我们不应该将它们视为是强力弹。”#</p>
 <p>责任编辑：林妍</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11830326.htm">FDA：免洗液不能预防流感或埃博拉病毒</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828274.htm">前FDA局长：武汉肺炎病例数远高于官方数字</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/16/n11660160.htm">FDA警告Dollar Tree警惕中国制造产品</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/8/n11642948.htm">休斯顿癌症中心专家 或将出任FDA最高主管</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/19/n10988186.htm">150万青少年受害 FDA或禁售电子及雾化烟</a></li>
-> <li><a href="https://github.com/rfvbv298/djy/blob/master/gb/20/1/28/n11828274.md">前FDA局长：武汉肺炎病例数远高于官方数字</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】武汉肺炎蔓延17个国家和地区</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828774.htm">疑似武汉肺炎病人直接倒地 外地也陆续出现</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828145.htm">传中共政治局知疫情或亡党 重点保11城</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828117.htm">隐瞒参与千人计划 哈佛大学化学系主任被捕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823457.htm">阅微草堂笔记：老虎吃人也有所选择</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779463.htm">【命理】一朝天子一朝臣 天命所定</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812177.htm">初三民间故事　老鼠娶亲</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825853.htm">武汉肺炎 火化人数知多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824388.htm">上海136人医疗队在武汉求救 没有饭吃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828224.htm">【新闻看点】武汉市长甩锅 习要党员坚守？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823762.htm">【新闻看点】百年未见热核瘟疫 民众如何自救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826851.htm">台湾小狗咬烂护照阻止主人去武汉 网民称赞</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826784.htm">艺人白嘉莉计划回台定居：台湾女儿回家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828342.htm">美媒：科比曾与妻子约定永不同乘同一架飞机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825293.htm">Kobe骤逝 艺声、雨琦等K-POP明星痛心悼念</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/19/1/19/n10988186.md#1">150万青少年受害 FDA或禁售电子及雾化烟</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/19/11/8/n11642948.md#1">休斯顿癌症中心专家 或将出任FDA最高主管</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/19/11/16/n11660160.md#1">FDA警告Dollar Tree警惕中国制造产品</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/20/1/28/n11828274.md#1">前FDA局长：中共肺炎病例数远高于官方数字</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rfvbv298/djy/blob/master/gb/20/1/29/n11830326.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之一：神秘的樵夫</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/10/n12745735.md#1">【解密时分】教宗预言：末日审判将近？</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/8/n12741216.md#1">【解密时分】诺查丹玛斯预言苏共或中共政权？</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/5/n12734415.md#1">中国新年：回溯辛丑三百年 危难中寻曙光</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/10/n12745122.md#1">【十字路口】飞碟真的存在？轻生真能解脱？</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/13/n12750084.md#1">【时事纵横】拜登过年送礼 民主党嫁祸川普未果</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/13/n12750297.md#1">【大话西油】艺术史千古第一人：米开朗基罗（1）</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/13/n12751569.md#1">【解密时分】一周军情速递 美双航母南海演习</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/12/n12749639.md#1">新年团拜会 年轻男子环坐习近平四周引猜疑</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747753.md#1">林青霞仨女新年收特大红包 金额曝光惊呆网友</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/12/n12749602.md#1">中共常委赵乐际保不了弟弟 中南海酿巨变</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747753.md#1">林青霞仨女新年收特大红包 金额曝光惊呆网友</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747529.md#1">刘真离世近一年 辛龙除夕夜更新动态获网友打气</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747378.md#1">孙俪晒手写春联迎新年 网友喊话邓超跟着学</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/12/n12748843.md#1">福原爱与同学合组公司 想圆三代桌球对打梦</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/13/n12750216.md#1">睽违6年回家围炉 龙千玉发送60个红包迎好运</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747555.md#1">飞水很多人做错了 5招给肉类去腥味</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/14/n12751941.md#1">BMW如何发音？ 英国调查：95%的人都念错</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12747322.md#1">让头发变黑就喝这碗 4种鸡汤补气又补血</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/11/n12746160.md#1">黑巧克力降血压、提升好胆固醇又提神 2种最健康</a></li>
+<li><a href="https://github.com/ykuxep306/djy/blob/master/gb/21/2/14/n12751851.md#1">土耳其男子救了一只天鹅 两者维持友谊37年</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ykuxep306/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ykuxep306/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11830326.htm">FDA：免洗液不能预防流感或埃博拉病毒</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ykuxep306/djy/blob/master/gb/20/1/29/n11830326.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ykuxep306/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ykuxep306/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ykuxep306/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ykuxep306/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ykuxep306/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
