--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -16,7 +16,7 @@
 1.新年公开戏谑习近平......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752018.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752018.md#1" target="_blank">马云“消失”“小马云”被嫌弃 遭公司解雇</a><br></h3>近期，阿里巴巴创始人马云麻烦不断，自上月公开露面后再次沉寂。同时......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751949.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/133-320x200.png" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751949.md#1" target="_blank">大年初二 湖南一游乐设施发生事故致16伤</a><br></h3>2月13日，大年初二，湖南省邵阳县一游乐项目“飞椅”发生故障，导致......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748078.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/04/Fotolia_69128996_Subscription_L-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748078.md#1" target="_blank">国内法轮学员遇难 海外华人打电话营救</a><br></h3>“喂，你好！我想向你传递一个重要信息。”居住在澳洲的前大陆资深学者......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748078.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/04/Fotolia_69128996_Subscription_L-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748078.md#1" target="_blank">国内法轮功学员遇难 海外华人打电话营救</a><br></h3>“喂，你好！我想向你传递一个重要信息。”居住在澳洲的前大陆资深学者......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739586.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/000_9242QW-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12739586.md#1" target="_blank">美中印太角力 专家：美军需以实力坚守红线</a><br></h3>拜登就职伊始，印太海域就“硝烟四起”，局势紧张。中共在不仅屡屡派军......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751888.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/482849-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751888.md#1" target="_blank">陆疫苗未成候选疫苗 陈时中：技术资料不完备</a><br></h3>中华民国卫生福利部长、中央流行疫情指挥中心指挥官陈时中今天（2月1......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751882.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/S__3383315-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751882.md#1" target="_blank">成都一小区火灾 因封路多人跳楼 3人重伤</a><br></h3>大年初二早上6时许，四川双流区邹家场社区拆迁区域发生火灾，因社区在......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
