--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -6,6 +6,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774851.md#1" target="_blank">新诗：镂空的向晚</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774851.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/07/85f8b141d5bc0fbda92eb096d2a1a47f-e1468979431254-150x120.jpg" align ="left"></a>一峦峦汗水灌溉过的山 一条条泪水汇流过的河 起伏间 有多少新鲜的你我......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月25日 10:55 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/20/n12764433.md#1" target="_blank">同时死去的姊妹转生双胞胎 又见爸妈再当女儿</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/20/n12764433.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/whitley-bay-150x120.jpg" align ="left"></a>“轮回转世”的奇闻，在上世纪已经有不少研究问世，然而这一对姊妹同日死又同日生，且结为双胞胎托生原来的家庭，再续姊妹缘、亲子缘，此情此况人间罕见，此般巧合谁安排？此般情缘谁牵来？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月25日 7:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766939.md#1" target="_blank">奥匈帝国哈布斯堡家族的夏季行宫：美泉宫</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766939.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_309579545-700x420-150x120.jpg" align ="left"></a>近350多年来，美泉宫（Sch?nbrunn Palace，又译熊布朗宫）优雅地矗立在维也纳市郊，这里曾是奥地利最后一个王室——哈布斯堡王朝（Habsburg）的家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月25日 5:45 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774299.md#1" target="_blank">网红称重复做奇怪的梦 或解前世死因</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774299.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/Fotolia_74765550_Subscription_L-150x120.jpg" align ="left"></a>一个名叫托尔皮（Robert Tolppi）的网红声称，他最近一直做相同的恶梦。他暗示这可能与他前世的死因有关。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月25日 5:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766520.md#1" target="_blank">【涛哥侃封神】第三十三回  ?  黄飞虎泗水大战</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/22/n12766520.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_502408657-150x120.jpg" align ="left"></a>黄飞虎是纣王的第一武将，在黄飞虎离开纣王之后，开始出现不同有本事的人。后面就衍生出不同的故事。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月25日 5:24 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774292.md#1" target="_blank">什么是遗忘曲线？</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774292.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/Fotolia_103667945_Subscription_L-150x120.jpg" align ="left"></a>为了备考而通宵达旦的学习，对于很多人来说都不陌生。很多人也发现，虽然前一天看了很多书，但是第二天却有很多内容想不起来。这是因为有“遗忘曲线”，该曲线表明我们的大脑有严格的“不使用就忘记”的规则，这一规则让我们记住或忘记学过的知识。
 
@@ -42,10 +43,6 @@
 等了很久，很久
 她回答了我
 金色花瓣在微风中翩翩起舞......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 1:32 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/23/n12770290.md#1" target="_blank">神韵行（五十六）花木兰</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/23/n12770290.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/07/120530114904100551-150x120.jpg" align ="left"></a>古树荒阶花草稀，
-扉池墙瓦两因依。
-焉思红袖千穿巧，
-忽化青虹一舞飞。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月24日 12:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775177.md#1" target="_blank">一七令．正月十五</a><br></h3> 圆。 规矩，方圆。 元宵节，煮汤圆。 和和美美，团团圆圆。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 10:15 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775178.md#1" target="_blank">歌词：祥云起月月如兰</a><br></h3>元宵望月月圆圆， 茶韵芬芳香火燃。 拜谢师尊辛苦度， 宝书惊现盛开莲！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 12:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774790.md#1" target="_blank">台湾古典诗：民主与专制（二）</a><br></h3> 公投直选泯争端，顺应潮流社稷安， 保障人权昭法令，提升国格树标竿；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 12:06 AM			</td></tr>
