--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -8,7 +8,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774819.md#1" target="_blank">一缕清香薄荷叶 5种创意食用法 咖啡族也爱</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774819.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_1891951024-150x120.jpg" align ="left"></a>薄荷叶含有丰富的维生素A、C和B群，可强化肌肤、提升免疫力。薄荷叶是低热量食材，蛋白质和脂肪含量极低，并且含有薄荷醇可促进消化，很适合加入减重的饮食中，还能添加食物美味。薄荷叶经常无法一次用完，不用担心，除了用适当的方法来保存用剩的薄荷叶，还可以扩大薄荷叶的用途，例如做成薄荷咖啡、薄荷茶、薄荷粥、薄荷炒肉等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 5:05 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12776459.md#1" target="_blank">车在水下、船在桥上 荷兰水桥颠覆你的想像</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12776459.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_1149623948-150x120.jpg" align ="left"></a>一般人总认为桥是给车辆行驶的，但荷兰却有一座水桥专供船只行驶。更妙的是，这座桥的下方还有车辆通行，形成了“车在水下、船在桥上”的特殊景观，完全颠覆了人们的认知。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12776103.md#1" target="_blank">澳洲流浪绵羊像大毛球 剃毛35公斤差异惊人</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12776103.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/000_93Q4VD-150x120.jpg" align ="left"></a>澳洲一只绵羊在野外流浪多年，不但健康状况不佳，还长出一身厚重的羊毛，对身体造成负荷。所幸它被民众发现，随后被动物收容所救援与收留，而且剃除了重达35公斤的羊毛。而它在剃毛前后的照片呈现很大的反差，在网上引起了人们的关注。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 1:11 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank">睡眠提升疫苗效力？专家：晚上睡好觉 躺着就防疫</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_1646331403-150x120.jpg" align ="left"></a>睡觉也能抗疫？今天要给大家介绍不花一分钱，就能大大提高我们的免疫功能，还让新冠疫苗更有效的方法。为什么有的人比别人更容易得新冠肺炎，症状比别人更严重？其中睡眠不足是最关键的因素。我们今天关注3个问题：1. 睡眠不足怎样伤害免疫功能、降低新冠疫苗功效？2. 接种疫苗前后我们应该怎么睡觉？3. 怎么做才能睡得更好？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 1:03 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank">躺着就防疫！专家：晚上睡好觉增强疫苗效力</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_1646331403-150x120.jpg" align ="left"></a>睡觉也能抗疫？今天要给大家介绍不花一分钱，就能大大提高我们的免疫功能，还让新冠疫苗更有效的方法。为什么有的人比别人更容易得新冠肺炎，症状比别人更严重？其中睡眠不足是最关键的因素。我们今天关注3个问题：1. 睡眠不足怎样伤害免疫功能、降低新冠疫苗功效？2. 接种疫苗前后我们应该怎么睡觉？3. 怎么做才能睡得更好？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 1:03 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775614.md#1" target="_blank">【慧聊养生】一咳嗽就漏尿 提肛术止漏回春</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775614.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/20210225-XianHui-incontinence-01-150x120.jpg" align ="left"></a>最近，有个朋友向我诉苦，觉得自己真是老了，不但腿脚不如以前灵巧轻便，而且最让她烦心的是，常常漏尿。搬个东西，猛一咳嗽，都会漏尿，每次都让她猝不及防，又气又羞。
 
 她说，第一次出现漏尿是和同事在工作间隙跳绳。她以前很喜欢跳绳，也很在行，所以她非常自信能跳得很好。没想到她刚跳了第二下，一股尿液就突然涌出，吓了她一跳，然.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月26日 9:19 AM			</td></tr>
