--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,12 +17,12 @@
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/12/n12399155.md#1" target="_blank">癌症是慢性发炎的结果 名医推荐抗发炎好食物</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/9/12/n12399155.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_1602831712-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/16/n12755049.md#1" target="_blank">白米饭补脾胃、稳血糖 糖尿病也能安心吃</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/19/n12762302.md#1" target="_blank">偏头痛有哪些前兆？有时像中风 掌握1方法防发作</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/23/n12768699.md#1" target="_blank">缺乏维生素D易感染新冠 1招补充最快</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/23/n12770063.md#1" target="_blank">春天是轻松减肥和排毒的绝佳时机</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/24/n12772677.md#1" target="_blank">9种食物是“天然肠胃药” 改善胃食道逆流</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12773430.md#1" target="_blank">全球首例新冠病毒“人体挑战试验” 引2大争议</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12773740.md#1" target="_blank">【重播】春季防疫攻略 家用食材发挥大功效</a><br></h3>
-<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774871.md#1" target="_blank">生活充满不确定性 在混乱中学会放松</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775179.md#1" target="_blank">视力半个月好转 菊花养肝明目 1配方消除飞蚊症</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank">躺着就防疫！专家：晚上睡好觉增强疫苗效力</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775614.md#1" target="_blank">【慧聊养生】一咳嗽就漏尿 提肛术止漏回春</a><br></h3>
