--- a/gb/20/3/13/n11939189.md
+++ b/gb/20/3/13/n11939189.md
@@ -456,7 +456,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
+<li><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
