--- a/gb/nf5773_10.md
+++ b/gb/nf5773_10.md
@@ -12,7 +12,11 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/24/n12209444.md#1" target="_blank">内蒙公安副厅长孟建伟囚16年 儿子已判刑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/24/n12209444.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/m2-1-150x120.jpg" align ="left"></a>近日，中共内蒙古自治区公安厅前党委委员、副厅长孟建伟（正厅级）因受贿等罪被判处有期徒刑16年。此前，孟建伟次子孟根达来已被判刑4年。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月24日 11:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/24/n12208765.md#1" target="_blank">吉林政协前委员获刑10年半 曾迫害法轮功</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/24/n12208765.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/3314-6-150x120.jpg" align ="left"></a>6月23日，中共吉林省政协前常务委员倪连山，因受贿罪被判处有期徒刑10年半，罚款100万元人民币（下同），受贿所得被没收。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月24日 3:57 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/23/n12206190.md#1" target="_blank">山东日照市检察院前检察长涉贪获刑15年</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/23/n12206190.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/06/23-150x120.jpg" align ="left"></a>6月23日，中共日照市检察院前检察长巩盛昌因受贿、挪用公款、利用影响力受贿罪数罪并罚，被判处有期徒刑15年。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月23日 4:20 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/22/n12203246.md#1" target="_blank">“富可敌县” 内蒙一处级官员贪腐逾1.7亿</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/22/n12203246.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/3314-5-150x120.jpg" align ="left"></a>中共呼和浩特市经济技术开发区金川工业园管委会主任白海泉，于2020年1月最终被以职务犯罪判处无期徒刑。身为处级官员的白海泉非法收入逾1.7亿元（人民币，下同）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月22日 5:23 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/25/n12283665.md#1" target="_blank">内蒙金融窝案 贪官索贿五千万为儿装修美国房</a><br></h3>内蒙古金融系统近来接连曝出腐败大案，而最新一起涉案金额高达六亿多元（人民币，下同）。当地已出现塌方式腐败，仅在本月就有多名高官遭到处理。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月26日 6:20 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/24/n12281944.md#1" target="_blank">中共以商逼政？汇丰银行关闭深圳龙岗支行</a><br></h3>中共深圳银保监局日前声称，汇丰银行关闭了其位于该市龙岗区的一处支行，而汇丰解释称此举为正常商业动作。但外界指或是中共以商逼政恫吓英国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月25日 5:46 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/24/n12280850.md#1" target="_blank">内蒙古公安厅前副厅长大搞权钱交易被双开</a><br></h3>7月24日，中共内蒙古公安厅前党委委员、副厅长赵云辉被“双开”，并被立案审查调查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月24日 7:03 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/24/n12280564.md#1" target="_blank">湖北省司法厅厅长谭先振被免职</a><br></h3>7月24日，湖北省司法厅党委书记、厅长谭先振被免职。今年2月，武汉女子监狱刑满释放人员黄登英“闯京”事件轰动一时，令舆论关注官方“防控”疫情上的漏洞。官方公布此事件的调查结果，湖北省司法厅党委书记、厅长谭先振被立案调查。但是其在接受调查几天后，仍以上述身份参加公开活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月24日 4:08 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/23/n12279456.md#1" target="_blank">中共下令播放反美影片 网民：再次忽悠百姓</a><br></h3>由于中共瞒疫疫情导致全球蔓延，美中双边关系急剧恶化。近日中共当局要求全国广电系统播放有关抗美援朝等题材影片，与去年相关指令相比，这次要求更为严格。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月24日 7:45 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/21/n12271825.md#1" target="_blank">国开行湖北省分行前副行长杨德高退休后被查</a><br></h3>7月21日，中共国家开发银行（国开行）湖北省分行前党委委员、副行长杨德高涉嫌“严重违纪违法”，目前正在接受调查，并被采取留置措施。
 
 公开资料显示，现年62岁的杨德高，长期在金融系统任职。从1996年9月至2006年7月，历任国开行武汉分行信贷处处长、计财处处长、财会处处长、综合业务处处长，湖北省分行经营管理处处长、客户一处处长、客户四处处长；2006年.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月21日 3:27 PM							</td></tr>
@@ -27,9 +31,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/7/7/n12238413.md#1" target="_blank">工行前上海分行长顾国明受审 贪污1.36亿元</a><br></h3>7月7日上午，工行上海分行前党委书记、行长顾国明案在上海开庭审理。他被指控受贿1.36亿余元（人民币，下同）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年07月07日 3:20 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/28/n12218072.md#1" target="_blank">“收钱不办事是有底线”中共检察官雷语惹议</a><br></h3>在中国大陆人看来，中共司法腐败似乎已司空见惯。近日，辽宁省一名检察官在当庭回应辩护人时，诠释了何谓中共司法人员的“道德底线”，引发舆论关注和热议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月29日 9:55 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/26/n12212920.md#1" target="_blank">广东梅州女官与夫同日死 原因引关注</a><br></h3>日前，中共广东省梅州市文化广电旅游局女局长朱瑛突然死亡，其丈夫也在同日死亡，引发舆论关注。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月26日 9:42 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/19/n12199112.md#1" target="_blank">中国疫苗百姓优先？中共外交部：先惠及非洲</a><br></h3>中共卫健委日前通报称“中国三个新冠肺炎（中共病毒）疫苗取得新进展”。但遗憾的是，中国普通民众可能无法率先使用。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月20日 6:33 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/19/n12197855.md#1" target="_blank">受贿超1.2亿 中共质检总局前高官被判无期</a><br></h3>6月19日，中共前国家质量监督检验检疫总局（下称质检总局）副局长魏传忠以“受贿罪”被判无期徒刑，他被指受贿超过1.2亿元（人民币，下同）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月19日 7:11 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/19/n12197603.md#1" target="_blank">海南最富女法官认罪 其姐庭外打媒体人被拘</a><br></h3>日前，被称为“最富法官”的中共海南省高级法院前副院长张家慧受审。其被指控受贿数千万（人民币，下同）。当天，张家慧的姐姐在庭外殴打举报张家慧的一名媒体人，被行政拘留10日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月19日 4:46 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/6/19/n12197277.md#1" target="_blank">佳木斯市公安局高官刘岳森落马 曾迫害法轮功</a><br></h3>6月19日，中共黑龙江佳木斯市公安局前副局长刘岳森涉嫌“严重违纪违法”，目前正接受调查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年06月19日 1:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_11.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_10.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_10.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf5773_10.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5773_10.htm">https://www.epochtimes.com/gb/nf5773_10.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
